@@ -29,7 +29,7 @@ __issignalingd32 (_Decimal32 x)
   int cr0;
 
   /* DCM bit 5 is signaling NaN  */
-  asm ("dtstdc cr0,%1,33\n"
+  asm ("dtstdc cr0,%1,1\n"
        "mfcr   %0, 0\n"
        : "=r" (cr0)
        : "f" (input)
